<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_card"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/search_bg_color"
        app:cardCornerRadius="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/search_icon_card"
                android:background="@drawable/no_bg"
                android:textColorHint="@color/gray"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:hint="Search you content"
                android:textSize="12sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/search_icon_card"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_margin="1dp"
                app:cardBackgroundColor="@color/search_bg_color"
                app:cardCornerRadius="17dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:padding="2dp"
                    android:layout_marginLeft="10dp"
                    android:src="@android:drawable/ic_menu_search"
                    app:tint="@color/white" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/All_Festivals"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/view_All1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/View_All"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/view_all_bg"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:visibility="visible" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_all_festivel"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_centerVertical="true"
                    android:text="@string/Daily_Wishes"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/view_All2"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/View_All"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/view_all_bg"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:visibility="visible" />
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerView_daily_wishes"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_centerVertical="true"
                    android:text="@string/Family_Wishes"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/view_All3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/View_All"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/view_all_bg"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:visibility="visible" />
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="10dp"
                android:visibility="visible"
                android:padding="13dp"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/list_family"
                     android:layout_width="match_parent"
                     android:layout_margin="3dp"
                     android:layout_height="match_parent"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:spanCount="4"
                     />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="No Any Clients"
        android:textSize="25dp"
        android:visibility="gone" />

</RelativeLayout>
